# debuginfo-upload-server

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile
.cargo/: config.toml
.github/workflows/: publish.yml
src/: main.rs
