[package]
authors = ["Dualwu <dualwu_tech@outlook.com>"]
edition = "2021"
name = "debuginfo-upload-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
clap = {version = "3.2.16", features = ["env", "derive"]}
futures = "0.3.21"
lazy_static = "1.4.0"
tokio = {version = "1", features = ["full"]}
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
warp = "0.3.2"
