[package]
authors = ["Dualwu <dualwu_tech@outlook.com>"]
edition = "2021"
name = "debuginfo-upload-server"
version = "0.3.0"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["multipart", "tracing"] }
clap = { version = "4.3.2", features = ["derive", "env"] }
flate2 = "1.0.26"
futures-util = "0.3.28"
lazy_static = "1.4.0"
tar = "0.4.38"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.0", features = [
    "limit",
    "tracing",
    "trace",
    "fs",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[profile.release]
strip = "debuginfo"
lto = "thin"
