[package]
authors = ["Dualwu <dualwu_tech@outlook.com>"]
edition = "2024"
name = "debuginfo-upload-server"
version = "1.2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["multipart", "tracing"] }
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "env"] }
flate2 = "1.1.5"
futures-util = "0.3.31"
lazy_static = "1.5.0"
tar = "0.4.44"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tower-http = { version = "0.6.7", features = [
    "limit",
    "tracing",
    "trace",
    "fs",
] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
walkdir = "2.5.0"

[profile.release]
strip = "debuginfo"
lto = "thin"
